INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

FILE(GLOB PROTOBUF_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTOBUF_SRC_FILES})

ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARY})

SET(proto_include_dir ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
MESSAGE("set $proto_include_dir PARENT_SCOPE: ${CMAKE_CURRENT_BINARY_DIR}" )
